--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -47,7 +47,7 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin/, role: ROLE_USER }
+        - { path: ^/admin/, role: ROLE_ADMIN }
         - { path: ^/administre/, role: ROLE_PART }
         - { path: ^/mairie/, role: ROLE_MAIRIE }
-        - { path: ^/superadmin/, role: ROLE_ADMIN }
+        - { path: ^/superadmin/, role: ROLE_SUPER_ADMIN }
