--- a/src/LSI/MarketBundle/Resources/config/services.yml
+++ b/src/LSI/MarketBundle/Resources/config/services.yml
@@ -2,7 +2,8 @@ services:
 #    lsi_market.example:
 #        class: LSI\MarketBundle\Example
 #        arguments: ["@service_id", "plain_value", "%parameter%"]
-    lsi_market.email.reservation_mailer:
+    lsi_market.email.civilink_mailer:
         class: LSI\MarketBundle\Email\EnvoyerMail
         arguments:
             - "@mailer"
+            - "%mailer_user%"
