--- a/src/LSI/MarketBundle/Resources/config/routing.yml
+++ b/src/LSI/MarketBundle/Resources/config/routing.yml
@@ -112,9 +112,46 @@ ls_imarket_engagement:
     defaults:
         _controller: LSIMarketBundle:Code:nosEngagements
 
+# -----------------------------------------------------------------------------------------
 
+# Les routes concernants la gestion de la réservation
 
+# Pour consulter une réservation fait sur annonce
 
+ls_imarket_voir_reservation:
+    path: /annonce_reservee/{id}
+    defaults:
+        _controller: LSIMarketBundle:Market:voirReservation
 
+# Route pour la methode valider une réservation
+ls_imarket_valider_reservation:
+    path: /valider_reservation/{id}
+    defaults:
+        _controller: LSIMarketBundle:Market:valid
 
+# Route pour la methode refuser une réservation
+ls_imarket_refuser_reservation:
+    path: /refuser_reservation/{id}
+    defaults:
+        _controller: LSIMarketBundle:Market:refuser
 
+# Traitement de réservation par le demandeur
+
+ls_imarket_traitement_demandeur_reservation:
+    path: /reservation_demandeur/{id}
+    defaults:
+        _controller: LSIMarketBundle:Market:reservationdemandeur
+
+# Traitement de l'annulation d'une réservation validée par offreur
+
+ls_imarket_traitement_demandeur_annulerreserv:
+    path: /reservation_annule/{id}
+    defaults:
+        _controller: LSIMarketBundle:Market:annulerReservation
+
+# Modifier une réservation
+
+ls_imarket_traitement_demandeur_modifierreserv:
+    path: /reservation_modifier/{id}
+    defaults:
+        _controller: LSIMarketBundle:Market:modifierReservation
