--- a/src/LSI/MarketBundle/Resources/config/services.yml
+++ b/src/LSI/MarketBundle/Resources/config/services.yml
@@ -7,3 +7,8 @@ services:
         arguments:
             - "@mailer"
             - "%mailer_user%"
+
+#    lsi_market.file.twig.extension:
+#        class: LSI\MarketBundle\Extensions\ExistenceFichier
+#        tags:
+#            -{ name: twig.extension }
